# Edge-Detector

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetector/: CameraController.kt  FrameDispatcher.kt  GLSurfaceWrapper.kt  GLTextureRenderer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
